--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_56621ee29b6fb84?reconnect=true
 spring.datasource.url=jdbc:mysql://localhost:3306/bikepark?autoReconnect=true&useSSL=false
 #spring.datasource.username=bf9c69cd08bd29
-spring.datasource.username=gabi
+spring.datasource.username=root
 #spring.datasource.password=77341127
 spring.datasource.password=gabi
 spring.resources.add-mappings=true
 #db.driver = com.mysql.jdbc.Driver
-#db.url = jdbc:mysql://localhost:3306/bikepark?user=gabi&password=gabi
+#db.url = jdbc:mysql://localhost:3306/bikepark?user=root&password=gabi
 #heroku_56621ee29b6fb84
 
 server.port=8080
